Actualizacion de la carga del Excel

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,11 @@ version: '3.8'
 
 services:
   macmail_web_app:
-    image: iberlot/macmailling
+    # image: iberlot/macmailling
+    build:
+      context: ./
+      dockerfile: Dockerfile
+    image: prueba-web
     command: gunicorn macmail.wsgi:application --bind 0.0.0.0:8000
     restart: always
     volumes:
