--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,7 @@
     "cSpell.words": [
         "direccion",
         "polizas",
+        "superusuario",
         "Tiposdoc"
     ],
     // "python.pythonPath": ".env/bin/python",
