--- a/.gitignore
+++ b/.gitignore
@@ -127,11 +127,9 @@ dmypy.json
 
 # Pyre type checker
 .pyre/
-app/data
 data/*
 venv/*
 app/env/*
-data/db/*
 *.ibt
 app/static_media/excel_files/*
 */migrations/
@@ -139,21 +137,5 @@ app/static_media/excel_files/*
 app/reportes/migrations/
 app/auxiliares/migrations/
 keys/
-data/db/
 *.dblwr
-data/db/\#ib_16384_0.dblwr
-data/db/\#innodb_redo/\#ib_redo32_tmp
-data/db/\#innodb_redo/\#ib_redo33_tmp
-data/db/\#innodb_redo/\#ib_redo34_tmp
-data/db/\#innodb_redo/\#ib_redo35_tmp
-data/db/\#innodb_redo/\#ib_redo36_tmp
-data/db/\#innodb_redo/\#ib_redo37_tmp
-data/db/\#innodb_redo/\#ib_redo38_tmp
-data/db/\#innodb_redo/\#ib_redo39_tmp
-data/db/\#innodb_redo/\#ib_redo40_tmp
-data/db/ibdata1
-data/db/mysql.ibd
-data/db/undo_001
-data/db/undo_002
-data/db/*
-
+data\*
