--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -22,9 +22,11 @@ jobs:
           run: |
             python -m pip install --upgrade pip
             pip install -r requirements.txt
-        - name: Test with pytest
+        - name: Instal pytest
           run: |
             pip install pytest pytest-cov
+        - name: Test with pytest
+          run: |
             pytest tests.py --doctest-modules --junitxml=junit/test-results.xml --cov=com --cov-report=xml --cov-report=html
           continue-on-error: true
         - name: Lint with Ruff
