Hotfixx/find fields not found (#20)
* Implemente hotfix to find fields

--- a/.gitignore
+++ b/.gitignore
@@ -133,6 +133,11 @@ app/env/*
 *.ibt
 app/static_media/excel_files/*
 keys/
-*.dblwr
 data\*
 app/static_media/*
+
+*.dblwr
+*.cnf
+*.pem
+*.ibd
+app/macmail/settings.py
