--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -8,8 +8,11 @@ jobs:
     coverage:
         runs-on: ubuntu-latest
         steps:
-          - name: Get Cover 
-            uses: orgoro/coverage@v3.1
-            with:
-                coverageFile: path/to/coverage.xml
-                token: ${{ secrets.GITHUB_TOKEN }}
+            - name: Checkout action
+              uses: actions/checkout@v2
+            - name: Django Coverage action
+              uses: dc740/django-coveragepy-github-action@0.9
+              with:
+                django-app: 'reportes'
+                minimum-coverage: '86'
+          
