--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,7 +16,7 @@ services:
     ports:
       - 9000:8000
     env_file:
-      - ./.env.dev
+      - ./.env
     hostname: web
 
   macmail_db_host:
