--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -7,8 +7,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: ["3.8"]
-        # python-version: ["3.8", "3.9", "3.10"]
+        python-version: ["3.12"]
     steps:
       - uses: actions/checkout@v3
       - name: Set up Python ${{ matrix.python-version }}
@@ -21,11 +20,7 @@ jobs:
           pip install pylint-django
       - name: Install requirements
         run: |
-          pip install Django==4.1.3
-          pip install requests
-          pip install numpy
-          pip install matplotlib
-          pip install django-matplotlib
+          pip install -r requirements.txt
       - name: Analysing the code with pylint
         run: |
-          pylint --load-plugins=pylint_django $(git ls-files '*.py')
+          pylint --load-plugins=pylint_django --django-settings-module=macmail.settings $(git ls-files '*.py' ':!:**/migrations/*.py')
