--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -17,10 +17,21 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install pylint-django
       - name: Install requirements
         run: |
           pip install -r requirements.txt
       - name: Analysing the code with pylint
+        id: pylint
         run: |
-          pylint --load-plugins=pylint_django --django-settings-module=macmail.settings $(git ls-files '*.py' ':!:**/migrations/*.py')
+          pylint --load-plugins=pylint_django --django-settings-module=macmail.settings $(git ls-files '*.py' ':!:**/migrations/*.py') > pylint_report.txt || true
+      - name: Check pylint score
+        run: |
+          score=$(grep "Your code has been rated at" pylint_report.txt | grep -oE '[0-9]+\.[0-9]+')
+          echo "Pylint score: $score"
+          if (( $(echo "$score > 9.95" | bc -l) )); then
+            echo "Pylint score is greater than 9.95. Passing the action."
+          else
+            echo "Pylint score is less than or equal to 9.95. Failing the action."
+            cat pylint_report.txt  # Mostrar el contenido del informe pylint en la salida
+            exit 1
+          fi
