--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -21,10 +21,18 @@ jobs:
       uses: actions/setup-python@v3
       with:
         python-version: ${{ matrix.python-version }}
+
+    - name: Create and start virtual environment
+      run: |
+        python -m venv venv
+        source venv/bin/activate
+
     - name: Install Dependencies
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
     - name: Run Tests
+      env:
+        DB_NAME: test_db  # Define aquí las variables necesarias
       run: |
         python manage.py test
